--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-我们做网页来
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Okro</title>
+</head>
+<body>
+<h1>把每一天都当作生命中最后一天</h1>
+<p>当我十七岁的时候, 我读到了一句话：<br/>
+    “如果你把每一天都当作生命中最后一天去生活的话,那么有一天你会发现你是正确的。” <br/>
+    这句话给我留下了一个印象。<br/>
+从那时开始,过了33 年，我在每天早晨都会对着镜子问自己:<br/>
+    “如果今天是我生命中的最后一天, 你会不会完成你今天想做的事情呢？” <br/>
+    当答案连续多天是“No”的时候, 我知道自己需要改变某些事情了。
+</p>
+</body>
+</html>
