--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Okro</title>
 </head>
 <body>
+<img src="0.jpg"/>
 <h1>把每一天都当作生命中最后一天</h1>
 <p>当我十七岁的时候, 我读到了一句话：</p>
 <p>    “如果你把每一天都当作生命中最后一天去生活的话,那么有一天你会发现你是正确的。” </p>
